# obli-transpiler-framework

./: .editorconfig  .guix-channel  BRINGUP.adoc  CITATION.cff  Cargo.toml  ECOSYSTEM.scm  META.scm  README.adoc  ROADMAP.adoc  RSR_COMPLIANCE.adoc  STATE.scm  codemeta.json  guix.scm  justfile
.github/workflows/: codeql.yml  jekyll-gh-pages.yml  quality.yml  scorecard.yml  security-policy.yml  wellknown-enforcement.yml  workflow-linter.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: ai.txt  dc.xml  humans.txt  provenance.json  security.txt
docs/: CITATIONS.adoc  IR_SPEC.adoc  SPEC.adoc
examples/: complex.mobli  conditional.mobli  public_conditional.mobli  secret_value.mobli  simple.mobli
fuzz/: Cargo.toml
src/: ast.rs  emit.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  transform.rs
