# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2024-2025 hyperpolymath

[package]
name = "obli-transpiler"
version = "0.1.0"
edition = "2021"
description = "A toy oblivious program transpiler: MiniObli → Rust (constant-time)"
license = "MIT OR AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/obli-transpiler-framework"
keywords = ["transpiler", "oblivious", "constant-time", "privacy"]
categories = ["compilers", "cryptography"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "obli"
path = "src/main.rs"

[lib]
name = "obli_transpiler"
path = "src/lib.rs"
